Parsers/python-gen/ExcelParser.py
# Generated from D:/Yishai/ws/eco/Profile-Parser/Grammars/Excel.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExcelParser ( Parser ):

    grammarFileName = "Excel.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'{'", "'}'", "'+'", "'-'", "'%'", 
                     "'^'", "'*'", "'/'", "'&'", "'<'", "'>'", "'<='", "'>='", 
                     "'<>'", "'('", "')'", "','", "':'", "'!'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'#REF!'", "'SUM'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INT", "BOOL", "CELL", "HORIZONTAL_RANGE", 
                      "VERTICAL_RANGE", "ERROR", "ERROR_REF", "FUNCTION", 
                      "REFERENCE_FUNCTION", "FUNCTION_PREFIX", "ID", "RESERVED_NAME", 
                      "FILE", "SHEET", "DECIMAL", "STRING", "WS" ]

    RULE_start = 0
    RULE_array_formula = 1
    RULE_formula = 2
    RULE_constant = 3
    RULE_function_call = 4
    RULE_arguments = 5
    RULE_prefixed_function = 6
    RULE_function = 7
    RULE_reference = 8
    RULE_reference_item = 9
    RULE_prefix = 10
    RULE_named_range = 11

    ruleNames =  [ "start", "array_formula", "formula", "constant", "function_call", 
                   "arguments", "prefixed_function", "function", "reference", 
                   "reference_item", "prefix", "named_range" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    INT=21
    BOOL=22
    CELL=23
    HORIZONTAL_RANGE=24
    VERTICAL_RANGE=25
    ERROR=26
    ERROR_REF=27
    FUNCTION=28
    REFERENCE_FUNCTION=29
    FUNCTION_PREFIX=30
    ID=31
    RESERVED_NAME=32
    FILE=33
    SHEET=34
    DECIMAL=35
    STRING=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExcelParser.EOF, 0)

        def constant(self):
            return self.getTypedRuleContext(ExcelParser.ConstantContext,0)


        def formula(self):
            return self.getTypedRuleContext(ExcelParser.FormulaContext,0)


        def array_formula(self):
            return self.getTypedRuleContext(ExcelParser.Array_formulaContext,0)


        def getRuleIndex(self):
            return ExcelParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = ExcelParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21, 22, 26, 35, 36]:
                self.state = 24
                self.constant()
                pass
            elif token in [1]:
                self.state = 25
                self.match(ExcelParser.T__0)
                self.state = 26
                self.formula(0)
                pass
            elif token in [2]:
                self.state = 27
                self.array_formula()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 30
            self.match(ExcelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(ExcelParser.FormulaContext,0)


        def getRuleIndex(self):
            return ExcelParser.RULE_array_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_formula" ):
                listener.enterArray_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_formula" ):
                listener.exitArray_formula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_formula" ):
                return visitor.visitArray_formula(self)
            else:
                return visitor.visitChildren(self)




    def array_formula(self):

        localctx = ExcelParser.Array_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_array_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(ExcelParser.T__1)
            self.state = 33
            self.match(ExcelParser.T__0)
            self.state = 34
            self.formula(0)
            self.state = 35
            self.match(ExcelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExcelParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ReservedNameContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RESERVED_NAME(self):
            return self.getToken(ExcelParser.RESERVED_NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReservedName" ):
                listener.enterReservedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReservedName" ):
                listener.exitReservedName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReservedName" ):
                return visitor.visitReservedName(self)
            else:
                return visitor.visitChildren(self)


    class ConcatContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcat" ):
                listener.enterConcat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcat" ):
                listener.exitConcat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcat" ):
                return visitor.visitConcat(self)
            else:
                return visitor.visitChildren(self)


    class UnaryOpContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(ExcelParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryOp" ):
                listener.enterUnaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryOp" ):
                listener.exitUnaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryOp" ):
                return visitor.visitUnaryOp(self)
            else:
                return visitor.visitChildren(self)


    class ParenFormulaContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(ExcelParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenFormula" ):
                listener.enterParenFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenFormula" ):
                listener.exitParenFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenFormula" ):
                return visitor.visitParenFormula(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)


    class PercentContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(ExcelParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPercent" ):
                listener.enterPercent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPercent" ):
                listener.exitPercent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPercent" ):
                return visitor.visitPercent(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicativeOpContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeOp" ):
                listener.enterMultiplicativeOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeOp" ):
                listener.exitMultiplicativeOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeOp" ):
                return visitor.visitMultiplicativeOp(self)
            else:
                return visitor.visitChildren(self)


    class ExponContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpon" ):
                listener.enterExpon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpon" ):
                listener.exitExpon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpon" ):
                return visitor.visitExpon(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveOpContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveOp" ):
                listener.enterAdditiveOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveOp" ):
                listener.exitAdditiveOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveOp" ):
                return visitor.visitAdditiveOp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_call(self):
            return self.getTypedRuleContext(ExcelParser.Function_callContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class ConstantFormulaContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(ExcelParser.ConstantContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantFormula" ):
                listener.enterConstantFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantFormula" ):
                listener.exitConstantFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantFormula" ):
                return visitor.visitConstantFormula(self)
            else:
                return visitor.visitChildren(self)


    class ReferenceFormulaContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExcelParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def reference(self):
            return self.getTypedRuleContext(ExcelParser.ReferenceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReferenceFormula" ):
                listener.enterReferenceFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReferenceFormula" ):
                listener.exitReferenceFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReferenceFormula" ):
                return visitor.visitReferenceFormula(self)
            else:
                return visitor.visitChildren(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExcelParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = ExcelParser.ConstantFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 38
                self.constant()
                pass

            elif la_ == 2:
                localctx = ExcelParser.ReferenceFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 39
                self.reference(0)
                pass

            elif la_ == 3:
                localctx = ExcelParser.FunctionCallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 40
                self.function_call()
                pass

            elif la_ == 4:
                localctx = ExcelParser.UnaryOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 41
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==4 or _la==5):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 42
                self.formula(9)
                pass

            elif la_ == 5:
                localctx = ExcelParser.ParenFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 43
                self.match(ExcelParser.T__15)
                self.state = 44
                self.formula(0)
                self.state = 45
                self.match(ExcelParser.T__16)
                pass

            elif la_ == 6:
                localctx = ExcelParser.ReservedNameContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 47
                self.match(ExcelParser.RESERVED_NAME)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 67
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = ExcelParser.ExponContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 50
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 51
                        localctx.op = self.match(ExcelParser.T__6)
                        self.state = 52
                        self.formula(8)
                        pass

                    elif la_ == 2:
                        localctx = ExcelParser.MultiplicativeOpContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 53
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 54
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==8 or _la==9):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 55
                        self.formula(7)
                        pass

                    elif la_ == 3:
                        localctx = ExcelParser.AdditiveOpContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 56
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 57
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==4 or _la==5):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 58
                        self.formula(6)
                        pass

                    elif la_ == 4:
                        localctx = ExcelParser.ConcatContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 59
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 60
                        localctx.op = self.match(ExcelParser.T__9)
                        self.state = 61
                        self.formula(5)
                        pass

                    elif la_ == 5:
                        localctx = ExcelParser.ComparisonContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 62
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 63
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63490) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 64
                        self.formula(4)
                        pass

                    elif la_ == 6:
                        localctx = ExcelParser.PercentContext(self, ExcelParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 65
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 66
                        self.match(ExcelParser.T__5)
                        pass

             
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExcelParser.INT, 0)

        def DECIMAL(self):
            return self.getToken(ExcelParser.DECIMAL, 0)

        def STRING(self):
            return self.getToken(ExcelParser.STRING, 0)

        def BOOL(self):
            return self.getToken(ExcelParser.BOOL, 0)

        def ERROR(self):
            return self.getToken(ExcelParser.ERROR, 0)

        def getRuleIndex(self):
            return ExcelParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = ExcelParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 103152615424) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(ExcelParser.FunctionContext,0)


        def arguments(self):
            return self.getTypedRuleContext(ExcelParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return ExcelParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = ExcelParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.function()
            self.state = 75
            self.match(ExcelParser.T__15)
            self.state = 76
            self.arguments()
            self.state = 77
            self.match(ExcelParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExcelParser.FormulaContext)
            else:
                return self.getTypedRuleContext(ExcelParser.FormulaContext,i)


        def getRuleIndex(self):
            return ExcelParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = ExcelParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 137436921904) != 0):
                self.state = 79
                self.formula(0)


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 82
                self.match(ExcelParser.T__17)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 137436921904) != 0):
                    self.state = 83
                    self.formula(0)


                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prefixed_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_PREFIX(self):
            return self.getToken(ExcelParser.FUNCTION_PREFIX, 0)

        def function(self):
            return self.getTypedRuleContext(ExcelParser.FunctionContext,0)


        def getRuleIndex(self):
            return ExcelParser.RULE_prefixed_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixed_function" ):
                listener.enterPrefixed_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixed_function" ):
                listener.exitPrefixed_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefixed_function" ):
                return visitor.visitPrefixed_function(self)
            else:
                return visitor.visitChildren(self)




    def prefixed_function(self):

        localctx = ExcelParser.Prefixed_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prefixed_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(ExcelParser.FUNCTION_PREFIX)
            self.state = 92
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ExcelParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(ExcelParser.ID, 0)

        def prefixed_function(self):
            return self.getTypedRuleContext(ExcelParser.Prefixed_functionContext,0)


        def getRuleIndex(self):
            return ExcelParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)
